fix github workflows > workflows.yml

--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -7,4 +7,5 @@ jobs:
     runs-on: ubuntu-lastest
     steps:
     - uses: actions/checkout@v1
-    - name: stefanoeb/jest/action@1.0.3
+    - name: Run Jest
+    - name: stefanoeb/jest-action@1.0.3
