--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -1,11 +1,11 @@
-name: Run Tests in my proyect every push on GitHub
+name: Run Tests in my project every push on GitHub
 
 on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-lastest
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Run Jest
-    - name: stefanoeb/jest-action@1.0.3
+      uses: stefanoeb/jest-action@1.0.3
