--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Ejercicio 1 de la semana 4 del programa launchx - backend: NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "node ./node_modules/.bin/jest"
-  },
+    "test": "node ./node_modules/.bin/jest",
+      "linter": "node ./node_modules/eslint/bin/eslint.js .",
+      "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix"
+    },
   "author": "mabvmex",
   "license": "ISC",
   "devDependencies": {
